Запуск фильтров и обновления данных.

--- a/Cure.WebSite/Views/Shared/_ChildFilter.cshtml
+++ b/Cure.WebSite/Views/Shared/_ChildFilter.cshtml
@@ -1,10 +1,10 @@
 ﻿@using Cure.DataAccess
 
-@Ajax.BeginForm()
 <div class="row">
         <div class="col-md-3 col-ss-6">
             <div class="selector">
-                <input type="hidden" value="0">
+                @Html.Hidden("filtercountry", 0, new { id = "filtercountry" })
+                @*<input type="hidden" value="0">*@
                 <div class="selector-val" data-val="0">Все страны</div>
                 <ul class="selector-list">
                     <li data-val="0">Все страны</li>
@@ -17,9 +17,11 @@
         </div>
         <div class="col-md-3 col-ss-6">
             <div class="selector">
-                <input type="hidden" value="0">
+                @Html.Hidden("filterregion", 0, new { id = "filterregion" })
+                @*<input type="hidden" value="0">*@
                 <div class="selector-val" data-val="0">Все регионы</div>
                 <ul class="selector-list">
+                    <li data-val="0">Все регионы</li>
                     @foreach (string region in ViewBag.Regions)
                     {
                         <li data-val="@region">@region</li>
@@ -29,7 +31,8 @@
         </div>
         <div class="col-md-3 col-ss-6">
             <div class="selector">
-                <input type="hidden" value="0">
+                @Html.Hidden("filterage", 0, new { id = "filterage" })
+                @*<input type="hidden" value="0">*@
                 <div class="selector-val" data-val="0">Любой возраст</div>
                 <ul class="selector-list">
                     <li data-val="0">Любой возраст</li>
@@ -43,7 +46,8 @@
         </div>
         <div class="col-md-3 col-ss-6">
             <div class="selector">
-                <input type="hidden" value="0">
+                @Html.Hidden("filterdiagnoze", 0, new { id = "filterdiagnoze" })
+                @*<input type="hidden" value="0">*@
                 <div class="selector-val" data-val="0">Любой диагноз</div>
                 <ul class="selector-list">
                     <li data-val="0">Любой диагноз</li>                    
