--- a/Cure.WebSite/Views/Shared/_AccountMenu.cshtml
+++ b/Cure.WebSite/Views/Shared/_AccountMenu.cshtml
@@ -13,11 +13,12 @@
             @*<a class="logout-btn" role="button" title="Выход: Наталья Константинова">Выход</a>*@
         </div>
         <ul class="account-menu">
-            <li><a><i class="ico-user"></i>Профиль</a></li>
+            <li @Html.Raw(Request.Url.AbsolutePath.Contains("Cabinet") 
+                    && !Request.Url.AbsolutePath.Contains("MyPage") ? @"class=""active""" : @"")><a href="@Url.Action("Index", "Cabinet")"><i class="ico-user"></i>Профиль</a></li>
             <li><a><i class="ico-mail"></i><span class="count">3</span>Cообщения</a></li>
             <li><a><i class="ico-order"></i>Заявки</a></li>
             <li><a><i class="ico-money"></i>Баланс</a></li>
-            <li class="active"><a><i class="ico-page"></i>Моя страница</a></li>
+            <li @Html.Raw(Request.Url.AbsolutePath.Contains("MyPage") ? @"class=""active""" : @"")><a href="@Url.Action("MyPage", "Cabinet")"><i class="ico-page"></i>Моя страница</a></li>
             <li><a><i class="ico-cart"></i>Магазин</a></li>
         </ul>
     </div>
