--- a/Cure.WebSite/Views/Shared/_CabinetGalery.cshtml
+++ b/Cure.WebSite/Views/Shared/_CabinetGalery.cshtml
@@ -8,6 +8,7 @@
 {
     @Html.Hidden("pictodelete", "", new { id = "pictodelete" })
     @Html.Hidden("pictohideuphide", "", new { id = "pictohideuphide" })
+    @Html.Hidden("pictotop", "", new { id = "pictotop" })
     <div class="images-tile-add">
         @*<div class="comments-title">Добавить фото:</div>*@
         <div class="comments-addform">
