--- a/Cure.WebSite/Views/Cabinet/Messages.cshtml
+++ b/Cure.WebSite/Views/Cabinet/Messages.cshtml
@@ -42,22 +42,22 @@
                         <div class="chat-form-wrap">
                             <div class="chat-form-btns">
                                 <a class="chat-form-btn btn-smiles js-form-smiles-toggle" role="button"></a>
-                                <div class="chat-form-btn btn-files">
+                                @*<div class="chat-form-btn btn-files">
                                     <input class="js-chat-file" type="file">
-                                </div>
+                                </div>*@
                                 <ul class="chat-form-smiles" id="form-smiles">
-                                    <li data-type="smile_01"><img src="~/Content/img/smiles/smile_01.png" alt="__"></li>
-                                    <li data-type="smile_02"><img src="~/Content/img/smiles/smile_02.png" alt="__"></li>
-                                    <li data-type="smile_03"><img src="~/Content/img/smiles/smile_03.png" alt="__"></li>
-                                    <li data-type="smile_04"><img src="~/Content/img/smiles/smile_04.png" alt="__"></li>
-                                    <li data-type="smile_05"><img src="~/Content/img/smiles/smile_05.png" alt="__"></li>
-                                    <li data-type="smile_06"><img src="~/Content/img/smiles/smile_06.png" alt="__"></li>
-                                    <li data-type="smile_07"><img src="~/Content/img/smiles/smile_07.png" alt="__"></li>
-                                    <li data-type="smile_08"><img src="~/Content/img/smiles/smile_08.png" alt="__"></li>
-                                    <li data-type="smile_09"><img src="~/Content/img/smiles/smile_09.png" alt="__"></li>
-                                    <li data-type="smile_10"><img src="~/Content/img/smiles/smile_10.png" alt="__"></li>
-                                    <li data-type="smile_11"><img src="~/Content/img/smiles/smile_11.png" alt="__"></li>
-                                    <li data-type="smile_12"><img src="~/Content/img/smiles/smile_12.png" alt="__"></li>
+                                    <li data-type="smile_01" data-code=":)"><img src="~/Content/img/smiles/smile_01.png" alt="__"></li>
+                                    <li data-type="smile_02" data-code=":D"><img src="~/Content/img/smiles/smile_02.png" alt="__"></li>
+                                    <li data-type="smile_03" data-code=";)"><img src="~/Content/img/smiles/smile_03.png" alt="__"></li>
+                                    <li data-type="smile_04" data-code=":angel:"><img src="~/Content/img/smiles/smile_04.png" alt="__"></li>
+                                    <li data-type="smile_05" data-code=":*"><img src="~/Content/img/smiles/smile_05.png" alt="__"></li>
+                                    <li data-type="smile_06" data-code=":("><img src="~/Content/img/smiles/smile_06.png" alt="__"></li>
+                                    <li data-type="smile_07" data-code=":tears:"><img src="~/Content/img/smiles/smile_07.png" alt="__"></li>
+                                    <li data-type="smile_08" data-code=":devil:"><img src="~/Content/img/smiles/smile_08.png" alt="__"></li>
+                                    <li data-type="smile_09" data-code=":hate:"><img src="~/Content/img/smiles/smile_09.png" alt="__"></li>
+                                    <li data-type="smile_10" data-code=":like:"><img src="~/Content/img/smiles/smile_10.png" alt="__"></li>
+                                    <li data-type="smile_11" data-code=":dislike:"><img src="~/Content/img/smiles/smile_11.png" alt="__"></li>
+                                    <li data-type="smile_12" data-code=":love:"><img src="~/Content/img/smiles/smile_12.png" alt="__"></li>
                                 </ul>
                             </div>
                             <div class="chat-form-input-wrap">
