--- a/Cure.WebSite/Views/Shared/_CabinetDocumentsTales.cshtml
+++ b/Cure.WebSite/Views/Shared/_CabinetDocumentsTales.cshtml
@@ -10,11 +10,13 @@
             </a>
         </div>
         <div class="tile-nav">
-            <a class="btn-tile-delete"
-               onclick="javascript:DeleteDocument(@Model.Id, '@Html.Raw(Path.GetFileName(doc.UrlOriginal))');"></a>
-            <a class="btn-tile-toggle @Html.Raw(Model.HiddenPhotoList.Any(x => x.FileName == Path.GetFileName(doc.UrlOriginal)) ? "is-disabled" : "is-enabled") js-images-tile-toggle"
-               onclick="javascript:HideShowDocument(@Model.Id, '@Html.Raw(Path.GetFileName(doc.UrlOriginal))');"
-               role="button">@Html.Raw(Model.HiddenPhotoList.Any(x => x.FileName == Path.GetFileName(doc.UrlOriginal)) ? "Открыть" : "Скрыть")</a>
+            <div class="tile-nav-right">
+                <a class="btn-tile-delete"
+                   onclick="javascript:DeleteDocument(@Model.Id, '@Html.Raw(Path.GetFileName(doc.UrlOriginal))');"></a>
+                <a class="btn-tile-toggle @Html.Raw(Model.HiddenPhotoList.Any(x => x.FileName == Path.GetFileName(doc.UrlOriginal)) ? "is-disabled" : "is-enabled") js-images-tile-toggle"
+                   onclick="javascript:HideShowDocument(@Model.Id, '@Html.Raw(Path.GetFileName(doc.UrlOriginal))');"
+                   role="button">@*@Html.Raw(Model.HiddenPhotoList.Any(x => x.FileName == Path.GetFileName(doc.UrlOriginal)) ? "Открыть" : "Скрыть")*@</a>
+            </div>
         </div>
     </div>
 }
